--- a/Data Source/DIDONG/Source/HQL Product/Music Player/Music Player.csproj
+++ b/Data Source/DIDONG/Source/HQL Product/Music Player/Music Player.csproj
@@ -105,6 +105,9 @@
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
+    <Content Include="Resources\Ai Cung Co Ngay Xua - Phan Manh Quynh.mp3" />
+    <Content Include="Resources\Anh Ghet Lam Ban Em - Phan Manh Quynh.mp3" />
+    <Content Include="Resources\Chi Co Mot Nguoi De Yeu Tren The Gian - Mr Siro.mp3" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
