Thêm Flip Tile, Cycle Tile
Tạm thời để mô tả sơ lược về 2 cái loại tile này, chứ thực ra nó còn sơ
sài rất nhiều, cần phải bổ sung thêm

--- a/Data Source/NHUNG/SeminarNhung/FlipTile/FlipTile.csproj
+++ b/Data Source/NHUNG/SeminarNhung/FlipTile/FlipTile.csproj
@@ -137,6 +137,10 @@
     <Content Include="Assets\SquareTile150x150.png" />
     <Content Include="Assets\SquareTile71x71.png" />
     <Content Include="Assets\StoreLogo.png" />
+    <Content Include="Assets\Tiles\BackGroundImage.png" />
+    <Content Include="Assets\Tiles\CalendarIcon.png" />
+    <Content Include="Assets\Tiles\LargeBackgroundImage.png" />
+    <Content Include="Assets\Tiles\SmallICalendarIcon.png" />
     <Content Include="Assets\WideLogo.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -153,10 +157,6 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="BackGroundImage.png" />
-    <Content Include="CalendarIcon.png" />
-    <Content Include="LargeBackgroundImage.png" />
-    <Content Include="SmallICalendarIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
