Update Pass Data between MainPage and MyEvent
tạm thời biết cách truyền dữ liệu qua 2 page, giờ mình chỉnh sửa và làm
thêm mấy vấn đề nữa.

--- a/Data Source/NHUNG/SeminarNhung/Calendar/Calendar.csproj
+++ b/Data Source/NHUNG/SeminarNhung/Calendar/Calendar.csproj
@@ -94,6 +94,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="EventData.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -145,6 +146,10 @@
     <Content Include="Assets\SquareTile150x150.png" />
     <Content Include="Assets\SquareTile71x71.png" />
     <Content Include="Assets\StoreLogo.png" />
+    <Content Include="Assets\Tiles\BackGroundImage.png" />
+    <Content Include="Assets\Tiles\CalendarIcon.png" />
+    <Content Include="Assets\Tiles\LargeBackgroundImage.png" />
+    <Content Include="Assets\Tiles\SmallICalendarIcon.png" />
     <Content Include="Assets\WideLogo.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
