--- a/Data Source/DIDONG/Source/Music And Speech/PocketSphinxWindowsPhoneDemo/Music Player.csproj
+++ b/Data Source/DIDONG/Source/Music And Speech/PocketSphinxWindowsPhoneDemo/Music Player.csproj
@@ -90,22 +90,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Components\AlphaKeyGroup.cs" />
+    <Compile Include="AlphaKeyGroup.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Components\AudioContainer.cs" />
-    <Compile Include="Pages\ListSongPage.xaml.cs">
-      <DependentUpon>ListSongPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\MainPage.xaml.cs">
+    <Compile Include="AudioContainer.cs" />
+    <Compile Include="ListSong.xaml.cs" />
+    <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Components\MusicManager.cs" />
-    <Compile Include="Pages\PlaylistPage.xaml.cs">
-      <DependentUpon>PlaylistPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Components\PlayManager.cs" />
+    <Compile Include="MusicManager.cs" />
+    <Compile Include="PlayManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recorder\AudioDataEventArgs.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
@@ -114,31 +109,32 @@
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Recorder\WasapiAudioRecorder.cs" />
-    <Compile Include="Components\SettingManager.cs" />
-    <Compile Include="Pages\SettingPage.xaml.cs">
+    <Compile Include="SettingManager.cs" />
+    <Compile Include="SettingPage.xaml.cs">
       <DependentUpon>SettingPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Songs.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
-    <Page Include="Pages\ListSongPage.xaml">
+    <Page Include="ListSong.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\MainPage.xaml">
+    <Page Include="SettingPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\PlaylistPage.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Songs.xaml">
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\SettingPage.xaml">
       <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
