--- a/Data Source/DIDONG/Source/VP Game/build-Single-Desktop_Qt_5_5_1_MinGW_32bit-Debug/Makefile.Debug
+++ b/Data Source/DIDONG/Source/VP Game/build-Single-Desktop_Qt_5_5_1_MinGW_32bit-Debug/Makefile.Debug
@@ -99,7 +99,7 @@ distclean: clean
 first: $(first) copydeploymentfolders
 
 copydeploymentfolders:
-	@echo Copying application data... && $(COPY_DIR) "D:\VP Game\Single\qml" "D:\VP Game\build-Single-Desktop_Qt_5_5_1_MinGW_32bit-Debug\qml" && $(COPY_DIR) "D:\VP Game\Single\assets" "D:\VP Game\build-Single-Desktop_Qt_5_5_1_MinGW_32bit-Debug\assets"
+	@echo Copying application data... && $(COPY_DIR) "D:\Data Projects\HQL\Data Source\DIDONG\Source\VP Game\Single\qml" "D:\Data Projects\HQL\Data Source\DIDONG\Source\VP Game\build-Single-Desktop_Qt_5_5_1_MinGW_32bit-Debug\qml" && $(COPY_DIR) "D:\Data Projects\HQL\Data Source\DIDONG\Source\VP Game\Single\assets" "D:\Data Projects\HQL\Data Source\DIDONG\Source\VP Game\build-Single-Desktop_Qt_5_5_1_MinGW_32bit-Debug\assets"
 
 mocclean: compiler_moc_header_clean compiler_moc_source_clean
 
